<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01" 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:scrollbars="vertical">    

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
		
         <TextView 
		    android:id="@+id/SurveyFormLabel"
		    android:text="@string/surveyformlabel"
		    android:layout_width="fill_parent"
		    android:layout_height="match_parent"
		    android:layout_marginTop="20dp"
		    android:layout_marginBottom="40dp"
		    android:textScaleX="1.5"
		  /> 
        
        <TextView 
		    android:id="@+id/SpinEyesColorLabel"
		    android:text="@string/eyescolor"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    /> 
        <Spinner
		    android:id="@+id/SpinnerEyesColor"
		    android:layout_height="wrap_content"		  
		    android:prompt="@string/eyescolor"
		    android:layout_width="fill_parent"
		    android:spinnerMode="dialog"
		    android:entries="@array/eyescolorlist">
		</Spinner>
		
        <TextView 
		    android:id="@+id/SpinSkinTypeLabel"
		    android:text="@string/skintype"
		    android:layout_width="fill_parent"
		    android:layout_marginTop="15dp"
		    android:layout_height="fill_parent"
		    /> 
        <Spinner
		    android:id="@+id/SpinnerSkinType"
		    android:layout_height="wrap_content"		  
		    android:prompt="@string/skintype"
		    android:layout_width="fill_parent"
		    android:spinnerMode="dialog"
		    android:entries="@array/skintypelist">
		</Spinner>
       
        <CheckBox
    		android:id="@+id/CheckBoxResponse"
    		android:layout_height="wrap_content"
    		android:text="@string/eurolabcustomer"
    		android:layout_marginTop="15dp"
    		android:layout_width="fill_parent">
		</CheckBox>
		
        <Button android:id="@+id/button_send" 
        android:layout_width="match_parent"        
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/button_send"
        android:onClick="validSurvey"
        />
        

    </LinearLayout>
</ScrollView>